--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
     "builds":[{"src": "index.js", "use":"@now/node-server"}],
     "routes":[
         {
-          "src": "/(.*)*",
-          "dest": "index.js"
+          "src": "/api/(.*)*",
+          "dest": "/api"
         }
     ]
 }
