--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,8 +21,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "mongoose-slug-generator": "^1.0.4",
-    "nodemailer": "^6.6.0",
-    "nodemailer-smtp-transport": "^2.7.4",
-    "vercel": "^23.0.1"
+    "nodemailer": "^6.6.0"
   }
 }
