--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,12 @@
     "routes":[
         {
           "src": "/(.*)",
-          "dest": "/"
+          "dest": "/",
+          "headers": {
+            "Access-Control-Allow-Origin": "*",
+            "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+            "Access-Control-Allow-Credentials": "true"
+          }
         }
     ]
 }
