set access control origin

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
           "src": "/(.*)",
           "dest": "/",
           "headers": {
-            "Access-Control-Allow-Origin": "*",
+            "Access-Control-Allow-Origin": "https://jovial-payne-9512ac.netlify.app/",
             "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
             "Access-Control-Allow-Credentials": "true"
           },
