--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
           "headers": {
             "Access-Control-Allow-Origin": "https://jovial-payne-9512ac.netlify.app/",
             "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
-            "Access-Control-Allow-Credentials": "true"
+            "Access-Control-Allow-Credentials": true
           },
           "continue": true
         }
